# OpenGLToyrenderer

./: .gitattributes  .gitignore  LICENSE  README.md  doPackage_x64.bat
Data/: BRDFMaterialShader.frag  PbrTextureShader.frag  PbrTextureShader.vert  lightShader.frag  modelShader.frag  simpleMaterialShader.frag  simpleMeshShader.frag  simpleMeshShader.vert  skyboxShader.frag  skyboxShader.vert
Data/Models/earth/: earth.mtl
Data/Models/jupiter/: jupiter.mtl
Data/Models/mars/: mars.mtl
Data/Models/mercury/: mercury.mtl
Data/Models/moon/: moon.mtl
Data/Models/neptune/: neptune.mtl
Data/Models/saturn/: saturn.mtl
Data/Models/sun/: sun.mtl
Data/Models/uranus/: uranus.mtl
Data/Models/venus/: venus.mtl
Data/Models/wheel/: Autoreifen.mtl
Data/Shaders/: brdf.vert  flat.frag  lightShader.vert  pbrMaterial.frag  pbrMaterial.vert  pbrMaterialTextured.frag  pbrMaterialTextured.vert  pbrTextureShader.frag  phong.frag  pointLightDepthMap.geom  postFX.frag  postFX.vert  skybox.frag  skybox.vert  skyboxShader.frag  skyboxShader.vert  unlit.frag  unlit.vert
Data/Textures/Loaded/: TexturesPauseButton.fTex  TexturesPlayButton.fTex  TexturesStopButton.fTex  hextechalbedo.fTex  hextechnormal.fTex
Engine/Components/: Animation.cpp  Animation.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialPBR.cpp  MaterialPBR.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Transform.cpp  Transform.h
Engine/ECS/: ComponentStorage.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
Engine/Geometry/: Cube.cpp  Cube.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  StudentCube.cpp  StudentCube.h
Engine/Interfaces/: ICube.h  IMaterial.h  IMesh.h  IModel.h  ISceneObject.h  IShader.h  ITexture.h
Engine/OpenGL/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderbuffer.cpp  Renderbuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Engine/RenderPasses/: GeomPass.cpp  GeomPass.h  PostFXPass.cpp  PostFXPass.h  ShadowPass.cpp  ShadowPass.h  SkyboxPass.cpp  SkyboxPass.h
Engine/Renderer/: RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  RendererData.h
Engine/Scene/: Animation.cpp  Camera.cpp  Camera.h  Plane.cpp  Plane.h  ReflectionProbe.cpp  ReflectionProbe.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Skybox.cpp  Skybox.h  Sphere.cpp  Sphere.h  StudentCube.cpp  StudentCube.h  World.cpp  World.h
Engine/Utils/: pch.h  types.h
Engine/Window/: ImGuiWindow.cpp  ImGuiWindow.h  Window.cpp  Window.h
Projects/Aufgabe1/: CMakeLists.txt
Projects/Aufgabe1/src/: main.cpp
Projects/Aufgabe2/: CMakeLists.txt
Projects/Aufgabe2/src/: main.cpp
Projects/Aufgabe3/: CMakeLists.txt
Projects/Aufgabe3/src/: main.cpp
Projects/Aufgabe4/: CMakeLists.txt
Projects/Aufgabe4/src/: main.cpp
Projects/Aufgaben_ANI/: CMakeLists.txt  build_vs2019.bat
Projects/Aufgaben_ANI/src/: Application.cpp  main.cpp
Projects/Common/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Header.h  ICube.h  IMaterial.h  IMesh.h  IModel.h  ISceneObject.h  IShader.h  ITexture.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  MaterialPBR.cpp  MaterialPBR.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Plane.cpp  Plane.h  ReflectionProbe.cpp  ReflectionProbe.h  Renderbuffer.cpp  Renderbuffer.h  Scene.cpp  Scene.h  SceneHierarchyPanel.h  SceneObject.cpp  SceneObject.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Sphere.cpp  (+13 more)
Projects/Common/Aufgabe1/: StudentCube.cpp  StudentCube.h
Projects/Common/Utils/: glm.natvis
Projects/PBRSampleScene/: CMakeLists.txt
Projects/PBRSampleScene/src/: Application.cpp  main.cpp
Projects/SampleScene/: CMakeLists.txt  build.sh  build_vs2022.bat
Projects/SampleScene/src/: Application.cpp
vcpkg/installed/vcpkg/info/: assimp_5.0.1_x64-windows.list  fastlz_2021-05-10_x64-windows.list  flatbuffers_1.12.0_x64-windows.list  freeglut_3.2.1_x64-windows.list  glew_2.1.0_x64-windows.list  glm_0.9.9.8_x64-windows.list  imgui_1.82_x64-windows.list  imgui_1.83_x64-windows.list  imgui_1.83_x86-windows.list  irrlicht_1.8.4-10_x64-windows.list  kubazip_0.1.19_x64-windows.list  libzip_1.7.3_x64-windows.list  lz4_1.9.3_x64-windows.list  minizip_1.2.11_x64-windows.list  msgpack_3.3.0_x64-windows.list  opengl-registry_2020-03-25_x64-windows.list  opengl_0.0_x64-windows.list  poly2tri_2020-07-21_x64-windows.list  polyclipping_6.4.2_x64-windows.list  protobuf_3.15.8_x64-windows.list  rapidjson_2020-09-14_x64-windows.list  rpclib_2.2.1_x64-windows.list  sdl2-gfx_1.0.4_x64-windows.list  sdl2-image_2.0.5_x64-windows.list  sdl2-mixer_2.0.4_x64-windows.list  sdl2-net_2.0.1-8_x64-windows.list  sdl2-ttf_2.0.15-3_x64-windows.list  sdl2_2.0.14_x64-windows.list  sdl2pp_0.16.1_x64-windows.list  utfcpp_3.1.2_x64-windows.list  utfcpp_3.2.1_x64-windows.list  vcpkg-cmake_2021-02-28_x64-windows.list  xxhash_0.8.0_x64-windows.list  zstd_1.4.9_x64-windows.list  zziplib_0.13.71_x64-windows.list
vcpkg/installed/vcpkg/updates/: 0000000000  0000000001  0000000002  0000000004
vcpkg/installed/x64-windows/debug/: glbinding-auxd.lib  glbindingd.lib
vcpkg/installed/x64-windows/debug/lib/: assimp-vc142-mtd.lib  bz2d.lib  freeglutd.lib  glad.lib  glew32d.lib  glfw3dll.lib  kubazip.lib  libpng16d.lib  minizip.lib  poly2tri.lib  polyclipping.lib
vcpkg/installed/x64-windows/include/glbinding/: glbinding_features.h
vcpkg/installed/x64-windows/include/glbinding-aux/: glbinding-aux_features.h
vcpkg/installed/x64-windows/lib/: Irrlicht.lib  assimp-vc142-mt.lib  bz2.lib  freeglut.lib  glad.lib  glbinding-aux.lib  glbinding.lib  glew32.lib  kubazip.lib  libpng16.lib  minizip.lib  poly2tri.lib  polyclipping.lib
vcpkg/installed/x64-windows/lib/pkgconfig/: freeglut.pc
vcpkg/installed/x64-windows/share/assimp/: assimpConfig.cmake  vcpkg_abi_info.txt
vcpkg/installed/x64-windows/share/bzip2/: vcpkg_abi_info.txt
vcpkg/scripts/buildsystems/msbuild/: vcpkg.props
(+52 files in other folders)
